warehouse20/organizr/statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: organizr
  namespace: warehouse20
  labels:
    app: organizr
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: http
      targetPort: http
      port: 80
      protocol: TCP
  selector:
    app: organizr

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: organizr
  name: organizr
  namespace: warehouse20
spec:
  serviceName: organizr
  selector:
    matchLabels:
      app: organizr
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: organizr
    spec:
      automountServiceAccountToken: false
      containers:
      - name: organizr
        image: organizrtools/organizr-v2:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: http
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: http
        resources:
          requests:
            cpu: 200m
            memory: 256Mi
          limits:
            cpu: 1000m
            memory: 1Gi
        volumeMounts:
        - mountPath: /config
          name: data
          subPath: data
      volumes:
      - name: data
        iscsi:
          iqn: iqn.2019-03.com.ntwk20:vault01.organizr.cdab998267
          targetPortal: 172.20.1.5
          lun: 1
          chapAuthSession: true
          secretRef:
            name: vault01-chap-secret
