warehouse20/organizr/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-tls-secret: ingress-nginx/cf-origin
  labels:
    app: organizr
  name: organizr
  namespace: warehouse20
spec:
  rules:
  - host: warehouse20.com
    http:
      paths:
      - backend:
          serviceName: organizr
          servicePort: http
  tls:
  - hosts:
    - warehouse20.com
    secretName: cf-w20
