warehouse20/organizr/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: organizr
  namespace: warehouse20
spec:
  podSelector:
    matchLabels:
      app: organizr
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: monitorr
    - namespaceSelector:
        matchLabels:
          purpose: nginx-ingress-prod
    ports:
    - protocol: TCP
      port: http
